<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="#f5f5f5">

    <!-- Login Page Heading -->
    <TextView
        android:id="@+id/login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login page"
        android:textSize="24sp"
        android:textColor="#333333"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_below="@id/login_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_image" />


    <LinearLayout
        android:id="@+id/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="#F3ECEC"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp" />

    </LinearLayout>



    <!-- Email EditText -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:layout_below="@id/login_with_google"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:textColor="#333333"
        tools:ignore="RtlSymmetry"/>

    <!-- Password EditText -->
    <LinearLayout
        android:id="@+id/password_and_eye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_email"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:background="#FFFFFF"
            android:textColor="#333333"
            android:layout_weight="1"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/password_visibility_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_saw_hide_eye"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:contentDescription="eye" />
    </LinearLayout>

    <!-- Forgot Password TextView -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#333333"
        android:layout_below="@id/password_and_eye"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:layout_alignParentEnd="true"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="18sp"/>



    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create an Account? sign up"
        android:layout_below="@+id/btn_login"
        android:textSize="15sp"
        android:textColor="#333333"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>